minimal bug sa status button working next and back button

--- a/src/index.html
+++ b/src/index.html
@@ -54,13 +54,18 @@
             </div>
         </div>
         <div class="in-progress">
-            <div class="inprogress-container" ondrop="drop(event)" ondragover="allowDrop(event)">
+            <div class="inprogress-container">
                 <h1>In progress</h1>
+                <div class="inprogress-container-card">
+
+                </div>
             </div>
         </div>
         <div class="on-approval">
-            <div class="onapproval-container" ondrop="drop(event)" ondragover="allowDrop(event)">
+            <div class="onapproval-container" >
                 <h1>Done</h1>
+                <div class="onapproval-container-card">
+                </div>
             </div>
         </div>
  
@@ -86,6 +91,8 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, veritatis et. Illo aperiam quidem deleniti explicabo animi, voluptatem earum illum qui consequatur maiores hic, reprehenderit architecto labore dolores sapiente repudiandae.</p>
             <button id="todo">To do</button>
             <p id="current-date-task"></p>
+            <button id="next">Next</button>
+            <button id="back">Back</button>
         </div>
     </div>
     
